// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getHoverStyle() > should return correct css for opts: { borderRadius: '6px' } 1`] = `
{
  "@media": {
    "(hover:hover)": {
      "selectors": {
        "&:hover": {
          "background": "hsla(236, 6.4%, 51%, 0.148)",
        },
      },
    },
  },
  "borderRadius": "6px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1)",
}
`;

exports[`getHoverStyle() > should return correct css for opts: { borderRadius: 'medium' } 1`] = `
{
  "@media": {
    "(hover:hover)": {
      "selectors": {
        "&:hover": {
          "background": "hsla(236, 6.4%, 51%, 0.148)",
        },
      },
    },
  },
  "borderRadius": "6px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1)",
}
`;

exports[`getHoverStyle() > should return correct css for opts: { borderRadius: 'small' } 1`] = `
{
  "@media": {
    "(hover:hover)": {
      "selectors": {
        "&:hover": {
          "background": "hsla(236, 6.4%, 51%, 0.148)",
        },
      },
    },
  },
  "borderRadius": "4px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1)",
}
`;

exports[`getHoverStyle() > should return correct css for opts: { borderRadius: undefined } 1`] = `
{
  "@media": {
    "(hover:hover)": {
      "selectors": {
        "&:hover": {
          "background": "hsla(236, 6.4%, 51%, 0.148)",
        },
      },
    },
  },
  "borderRadius": "4px",
  "marginLeft": "-2px",
  "marginRight": "-2px",
  "paddingLeft": "2px",
  "paddingRight": "2px",
  "transition": "background var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1)",
}
`;
